--- a/home/.config/nvim/conf.d/dein.toml
+++ b/home/.config/nvim/conf.d/dein.toml
@@ -6,8 +6,8 @@ repo = 'Shougo/dein.vim'
 #hook_add = '''
 #'''
 
-[[plugins]]
-repo = 'vifm/neovim-vifm'
+#[[plugins]]
+#repo = 'vifm/neovim-vifm'
 
 [[plugins]]
 repo = 'machakann/vim-sandwich'
@@ -20,6 +20,6 @@ hook_add = '''
 [[plugins]]
 repo = 'machakann/vim-textobj-delimited'
 
-[[plugins]]
-repo = 'rust-lang/rust.vim'
-on_ft = ['rust']
+#[[plugins]]
+#repo = 'rust-lang/rust.vim'
+#on_ft = ['rust']
