change compose key to r-alt

--- a/etc/X11/xorg.conf.d/70-keyboard.conf
+++ b/etc/X11/xorg.conf.d/70-keyboard.conf
@@ -1,5 +1,5 @@
 Section "InputClass"
 	Identifier "AllKeyboards"
 	MatchIsKeyboard "on"
-	Option "XkbOptions" "compose:paus"
+	Option "XkbOptions" "compose:ralt"
 EndSection
