add backup script for fcitx

--- a/init/fcitx/conf/fcitx-classic-ui.config
+++ b/init/fcitx/conf/fcitx-classic-ui.config
@@ -6,9 +6,9 @@
 # Font Size
 #FontSize=0
 # Font
-Font=Noto Sans CJK JP
+Font=IPA Pゴシック
 # Menu Font
-MenuFont=Noto Sans CJK JP
+MenuFont=IPA Pゴシック
 # Font Locale to display
 FontLocale=ja_JP.UTF-8
 # Use System Tray Icon
