--- a/init/fcitx/config
+++ b/init/fcitx/config
@@ -1,6 +1,6 @@
 [Hotkey]
 # Trigger Input Method
-TriggerKey=HIRAGANAKATAKANA
+TriggerKey=HENKANMODE
 # Use extra trigger key only after using it to inactivate
 # Available Value:
 # True False
