--- a/home/.config/fontconfig/fonts.conf
+++ b/home/.config/fontconfig/fonts.conf
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-<alias>
-	<family>serif</family>
-	<prefer>
-		<family>Liberation Serif</family>
-		<family>IPAPMincho</family>
-	</prefer>
-</alias>
-<alias>
-	<family>sans-serif</family>
-	<prefer>
-		<family>Liberation Sans</family>
-		<family>IPAPGothic</family>
-	</prefer>
-</alias>
-<alias>
-	<family>monospace</family>
-	<prefer>
-		<family>Liberation Mono</family>
-		<family>IPAGothic</family>
-	</prefer>
-</alias>
+	<match target="pattern">
+		<test qual="any" name="family"><string>serif</string></test>
+		<edit mode="append" name="family" binding="strong">
+			<string>DejaVu Serif</string>
+			<string>IPAPMincho</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test qual="any" name="family"><string>sans-serif</string></test>
+		<edit mode="append" name="family" binding="strong">
+			<string>DejaVu Sans</string>
+			<string>IPAPGothic</string>
+		</edit>
+	</match>
+	<match target="pattern">
+		<test qual="any" name="family"><string>monospace</string></test>
+		<edit mode="append" name="family" binding="strong">
+			<string>DejaVu Sans Mono</string>
+			<string>IPAGothic</string>
+		</edit>
+	</match>
 </fontconfig>
