update xmonad setting

--- a/home/.config/nvim/conf.d/plugin/deoplete.toml
+++ b/home/.config/nvim/conf.d/plugin/deoplete.toml
@@ -5,6 +5,8 @@ on_event = 'InsertEnter'
 hook_add = '''
 	let g:deoplete#enable_at_startup = 1
 	let g:deoplete#max_list = 7
+	"issue #440
+	let g:deoplete#auto_complete_delay=50
 	inoremap <expr> <A-u> (pumvisible() ? keymap#abort_popup() : deoplete#undo_completion())
 '''
 
