[fcitx] fix inline input and backup

--- a/init/fcitx/conf/fcitx-keyboard.config
+++ b/init/fcitx/conf/fcitx-keyboard.config
@@ -9,9 +9,9 @@
 # Alt
 # Ctrl
 # Shift
-#ChooseModifier=Alt
+ChooseModifier=None
 # Toggle the word hint
-#HotkeyToggleWordHint=CTRL_ALT_H
+HotkeyToggleWordHint=
 # Minimum length to trigger word hint
 #MinimumHintLength=1
 # Maximum length of spell hint list
@@ -21,5 +21,5 @@
 # True False
 #UseEnterToCommit=False
 # Add current input buffer to user dictionary
-#HotkeyAddToUserDict=CTRL_ALT_N
+HotkeyAddToUserDict=
 
