--- a/init/fcitx/conf/fcitx-classic-ui.config
+++ b/init/fcitx/conf/fcitx-classic-ui.config
@@ -6,9 +6,9 @@
 # Font Size
 #FontSize=0
 # Font
-Font=IPA Pゴシック
+Font=IPAPGothic
 # Menu Font
-MenuFont=IPA Pゴシック
+MenuFont=IPAGothic
 # Font Locale to display
 FontLocale=ja_JP.UTF-8
 # Use System Tray Icon
@@ -27,5 +27,5 @@ FontLocale=ja_JP.UTF-8
 # True False
 #VerticalList=False
 # Skin Name
-#SkinType=default
+SkinType=dark
 
