--- a/etc/httpd/conf/vhost/develop.conf
+++ b/etc/httpd/conf/vhost/develop.conf
@@ -8,4 +8,9 @@
 	DocumentRoot "/home/youhei/workspace/http/hkmtyh"
 	ServerName hkmtyh.dev
 </VirtualHost>
+
+<VirtualHost *:80>
+	DocumentRoot "/home/youhei/workspace/http/computer.hkmtyh"
+	ServerName computer.hkmtyh.dev
+</VirtualHost>
 # vim:ft=apache
