add filetype plugin for rust

--- a/home/.config/nvim/conf.d/plugin/main.toml
+++ b/home/.config/nvim/conf.d/plugin/main.toml
@@ -7,6 +7,7 @@ repo = 'machakann/vim-textobj-delimited'
 [[plugins]]
 repo = 'cespare/vim-toml'
 
-#[[plugins]]
-#repo = 'rust-lang/rust.vim'
-#on_ft = ['rust']
+[[plugins]]
+repo = 'rust-lang/rust.vim'
+lazy = 1
+on_ft = 'rust'
