--- a/etc/systemd/system/mbsync@.service
+++ b/etc/systemd/system/mbsync@.service
@@ -5,5 +5,6 @@ Descriptionn=Mailbox synchronization service
 Type=oneshot
 ExecStart=/usr/bin/mbsync -Va
 User=%i
+Environment="PATH=/usr/bin:/home/%i/bin"
 StandardOutput=syslog
 StandardError=syslog
