--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -4,22 +4,22 @@
 	<match target="pattern">
 		<test qual="any" name="family"><string>serif</string></test>
 		<edit mode="append" name="family" binding="strong">
-			<string>DejaVu Serif</string>
-			<string>IPAPMincho</string>
+			<string>Source Sans Pro</string>
+			<string>Source Han Sans JP</string>
 		</edit>
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family"><string>sans-serif</string></test>
 		<edit mode="append" name="family" binding="strong">
-			<string>DejaVu Sans</string>
-			<string>IPAPGothic</string>
+			<string>Source Serif Pro</string>
+			<string>Source Han Sans JP</string>
 		</edit>
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family"><string>monospace</string></test>
 		<edit mode="append" name="family" binding="strong">
-			<string>DejaVu Sans Mono</string>
-			<string>IPAGothic</string>
+			<string>Source Code Pro</string>
+			<string>Source Han Sans JP</string>
 		</edit>
 	</match>
 </fontconfig>
