source han serif jp

--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -12,7 +12,7 @@
 		<test qual="any" name="family"><string>sans-serif</string></test>
 		<edit mode="append" name="family" binding="strong">
 			<string>Source Serif Pro</string>
-			<string>Source Han Sans JP</string>
+			<string>Source Han Serif JP</string>
 		</edit>
 	</match>
 	<match target="pattern">
