jorney for over the spot and drawing kakoune correctly on terminal
urxvt doesn't work over the spot with font setting
mlterm doesn't draw kakoune correctly

--- a/fcitx/fcitx/conf/fcitx-classic-ui.config
+++ b/fcitx/fcitx/conf/fcitx-classic-ui.config
@@ -4,11 +4,11 @@
 # Status Panel Position Y
 #MainWindowOffsetY=40
 # Font Size
-#FontSize=0
+FontSize=10
 # Font
-Font=IPAPGothic
+Font=Source Han Sans JP
 # Menu Font
-MenuFont=IPAGothic
+MenuFont=Source Han Sans JP
 # Font Locale to display
 FontLocale=ja_JP.UTF-8
 # Use System Tray Icon
