--- a/fcitx/fcitx/conf/fcitx-classic-ui.config
+++ b/fcitx/fcitx/conf/fcitx-classic-ui.config
@@ -4,13 +4,13 @@
 # Status Panel Position Y
 #MainWindowOffsetY=40
 # Font Size
-FontSize=10
+FontSize=11
 # Font
 Font=Source Han Sans JP
 # Menu Font
 MenuFont=Source Han Sans JP
 # Font Locale to display
-FontLocale=ja_JP.UTF-8
+FontLocale=en_US.UTF-8
 # Use System Tray Icon
 # Available Value:
 # True False
