--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -4,22 +4,23 @@
 	<match target="pattern">
 		<test qual="any" name="family"><string>serif</string></test>
 		<edit mode="append" name="family" binding="strong">
-			<string>Source Sans Pro</string>
-			<string>Source Han Sans JP</string>
+			<string>Noto Serif</string>
+			<string>Noto Serif CJK JP</string>
 		</edit>
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family"><string>sans-serif</string></test>
 		<edit mode="append" name="family" binding="strong">
-			<string>Source Serif Pro</string>
-			<string>Source Han Serif JP</string>
+			<string>Noto Sans</string>
+			<string>Noto Sans CJK JP</string>
 		</edit>
 	</match>
 	<match target="pattern">
 		<test qual="any" name="family"><string>monospace</string></test>
 		<edit mode="append" name="family" binding="strong">
 			<string>Source Code Pro</string>
-			<string>Source Han Sans JP</string>
+			<string>Noto Mono</string>
+			<string>Noto Sans CJK JP</string>
 		</edit>
 	</match>
 </fontconfig>
